feat(CAT-FR-GD-07): adjustments after pr review